# zeta_agents

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: external_memory_stream_demo.py  handoff_demo.py  parallel_demo.py  pipeline_demo.py  single_agent.py  supervisor_demo.py  visualizer_demo.py
src/agent_sdk/: __init__.py
src/agent_sdk/core/: __init__.py  agent.py  context.py  event_bus.py  runnable.py  types.py
src/agent_sdk/experimental/: __init__.py  memory_manager.py
src/agent_sdk/llm/: __init__.py
src/agent_sdk/memory/: __init__.py
src/agent_sdk/modules/: __init__.py
src/agent_sdk/modules/llm/: __init__.py  base.py  factory.py  function.py  litellm_provider.py  mock.py  openai_compatible.py
src/agent_sdk/modules/memory/: __init__.py  base.py  in_memory.py
src/agent_sdk/modules/skills/: __init__.py  base.py
src/agent_sdk/modules/tools/: __init__.py  base.py
src/agent_sdk/orchestrators/: __init__.py  base.py  handoff.py  parallel.py  pipeline.py  supervisor.py
src/agent_sdk/persistence/: __init__.py  checkpointer.py
src/agent_sdk/runtime/: __init__.py  builder.py
src/agent_sdk/skills/: __init__.py
src/agent_sdk/tools/: __init__.py
src/agent_sdk/visualization/: __init__.py  visualizer.py
tests/: test_agent_stream.py  test_builder.py  test_checkpointer.py  test_external_memory_manager.py  test_handoff.py  test_llm_entry.py  test_memory.py  test_nested_orchestrators.py  test_orchestrator_stream.py  test_parallel.py  test_pipeline.py  test_supervisor.py  test_visualizer.py
